--- a/etc/sddm.conf
+++ b/etc/sddm.conf
@@ -27,7 +27,7 @@ RebootCommand=/bin/systemctl reboot
 
 [Theme]
 # Current theme name
-Current=patience
+Current=lxqt-frost
 
 # Cursor theme used in the greeter
 CursorTheme=adwaita
